<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/rootView"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".MainActivity">

    <TextView
      android:id="@+id/questionTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:textSize="20sp"
      tools:text="@string/question_oceans" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:gravity="center_horizontal"
      android:orientation="horizontal">

        <Button
          android:id="@+id/trueButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:text="@string/true_button"
          android:textSize="20sp" />

        <Button
          android:id="@+id/falseButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/false_button"
          android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:gravity="center_horizontal"
      android:orientation="horizontal">

        <ImageButton
          android:id="@+id/previousButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:contentDescription="@string/next_button"
          android:src="@drawable/arrow_left"
          android:text="@string/previous_button" />

        <ImageButton
          android:id="@+id/nextButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:contentDescription="@string/next_button"
          android:src="@drawable/arrow_right" />
    </LinearLayout>

    <Button
      android:id="@+id/cheatButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/cheat_button" />
</LinearLayout>