<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".CheatActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="24dp"
      android:text="@string/warning_text"
      android:textSize="24sp" />

    <TextView
      android:id="@+id/answerTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="24dp"
      android:text="@string/answer"
      android:textSize="24sp" />

    <Button
      android:id="@+id/showAnswerButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/show_answer_button" />

  </LinearLayout>
</layout>
